--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -40,16 +40,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yd3ZZKIV4qZu",
-        "outputId": "42306a14-dbf6-4d80-a625-b4cfa32fcb34"
+        "outputId": "304461e4-aed7-4046-9691-4c052f37587d"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Минимум: 0.01220145748657131\n",
-            "Максимум: 0.9899835784255762\n"
+            "Минимум: 0.011026065721207123\n",
+            "Максимум: 0.9895237421711497\n"
           ]
         }
       ]
@@ -73,10 +73,30 @@
         "print(chessboard)"
       ],
       "metadata": {
-        "id": "vDLBRNNw41gO"
+        "id": "vDLBRNNw41gO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6bf53cc4-fa4d-417a-a991-dcecef5e093d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Шахматная доска:\n",
+            "[[0 1 0 1 0 1 0 1]\n",
+            " [1 0 1 0 1 0 1 0]\n",
+            " [0 1 0 1 0 1 0 1]\n",
+            " [1 0 1 0 1 0 1 0]\n",
+            " [0 1 0 1 0 1 0 1]\n",
+            " [1 0 1 0 1 0 1 0]\n",
+            " [0 1 0 1 0 1 0 1]\n",
+            " [1 0 1 0 1 0 1 0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -96,10 +116,23 @@
         "print(z)\n"
       ],
       "metadata": {
-        "id": "gCy0xX3149Al"
+        "id": "gCy0xX3149Al",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a14d5e5-3701-4dd1-a227-549385b9f192"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Массив после изменения знака:\n",
+            "[ 0  1  2  3 -4 -5 -6 -7  8  9 10]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -122,10 +155,43 @@
         "print(z_normalized)"
       ],
       "metadata": {
-        "id": "OudC5H475B_M"
+        "id": "OudC5H475B_M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dfa8cea6-9d81-40b3-a147-8d3d22ee5bcf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Исходная матрица:\n",
+            "[[0.65885446 0.13107625 0.70621693 0.43067446 0.39818819 0.59075675\n",
+            "  0.41375118 0.77085653 0.3161873  0.5608661 ]\n",
+            " [0.48481047 0.03595023 0.14951549 0.09098974 0.74886    0.50006168\n",
+            "  0.54024077 0.42504791 0.09060229 0.70446064]\n",
+            " [0.38434069 0.17004716 0.81444387 0.8851203  0.68150478 0.50669636\n",
+            "  0.26771517 0.74286377 0.32649081 0.12984362]\n",
+            " [0.10878355 0.94892296 0.22088365 0.19397741 0.28301841 0.43122918\n",
+            "  0.65499402 0.7667675  0.14791086 0.98556894]\n",
+            " [0.58772856 0.32079732 0.32587499 0.66536487 0.7732404  0.94663817\n",
+            "  0.39360842 0.19153135 0.38450381 0.14795293]]\n",
+            "Нормализованная матрица:\n",
+            "[[ 0.16111165 -0.36666657  0.20847411 -0.06706835 -0.09955462  0.09301393\n",
+            "  -0.08399163  0.27311372 -0.18155551  0.06312329]\n",
+            " [ 0.10775655 -0.34110369 -0.22753843 -0.28606418  0.37180608  0.12300776\n",
+            "   0.16318684  0.04799398 -0.28645163  0.32740672]\n",
+            " [-0.10656597 -0.32085949  0.32353721  0.39421364  0.19059813  0.01578971\n",
+            "  -0.22319148  0.25195712 -0.16441585 -0.36106303]\n",
+            " [-0.36542209  0.47471731 -0.253322   -0.28022824 -0.19118724 -0.04297647\n",
+            "   0.18078838  0.29256185 -0.32629479  0.51136329]\n",
+            " [ 0.11400448 -0.15292676 -0.14784909  0.19164078  0.29951632  0.47291409\n",
+            "  -0.08011566 -0.28219273 -0.08922027 -0.32577115]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -145,10 +211,27 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "q8e3SmEU5GTE"
+        "id": "q8e3SmEU5GTE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "349c2262-5d4c-473d-e3ea-ef3e5e038c15"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Матрица после замены строк:\n",
+            "[[ 5  6  7  8  9]\n",
+            " [ 0  1  2  3  4]\n",
+            " [10 11 12 13 14]\n",
+            " [15 16 17 18 19]\n",
+            " [20 21 22 23 24]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -171,10 +254,32 @@
         "print(polar_coords)"
       ],
       "metadata": {
-        "id": "Ap48BysU5Lov"
+        "id": "Ap48BysU5Lov",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b9ec5f89-6261-4ade-b20a-1bd3d602c7fc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Полярные координаты:\n",
+            "[[0.71306965 1.51932849]\n",
+            " [0.48481091 0.36209451]\n",
+            " [1.15471558 0.95397465]\n",
+            " [0.69413998 1.22861249]\n",
+            " [1.01224106 1.25062836]\n",
+            " [0.80085355 1.12480825]\n",
+            " [0.35166567 0.73135274]\n",
+            " [1.04196522 0.75276819]\n",
+            " [0.95726228 0.73349168]\n",
+            " [0.57840173 0.02339934]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -195,10 +300,24 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "kxjQIYXs5P_p"
+        "id": "kxjQIYXs5P_p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b4249f97-2ecb-4e9e-e7e3-cbd877f0f726"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Массив после замены максимума:\n",
+            "[0.77314815 0.03999146 0.83392885 0.48493213 0.         0.65717156\n",
+            " 0.14982966 0.61002586 0.21764395 0.21773713]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -219,10 +338,23 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "6HeY-3PS5VhS"
+        "id": "6HeY-3PS5VhS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0075a3c-5007-4bbb-9443-a6fb89313d28"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Массив после добавления:\n",
+            "[3. 3. 3. 2. 5. 2. 4. 2. 3. 3.]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -243,10 +375,23 @@
         "print(result)"
       ],
       "metadata": {
-        "id": "6tw4AZ165ZfJ"
+        "id": "6tw4AZ165ZfJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eacaf5ca-dabf-4a74-c854-7e006a8638ff"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Вектор с нулями:\n",
+            "[1. 0. 0. 0. 2. 0. 0. 0. 3. 0. 0. 0. 4. 0. 0. 0. 5.]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -266,10 +411,22 @@
         "print(f\"Ближайшее к {v:.2f} число: {nearest}\")"
       ],
       "metadata": {
-        "id": "Icebpz8g5ce1"
+        "id": "Icebpz8g5ce1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39e1c73d-e44e-40a2-aace-d7a606f4c062"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ближайшее к 84.78 число: 85\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
